Added blog and guestbook portlets